--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: side_navigation
-description: Provides Flutter navigation by using a sidemenu similar to Drawer or ButtomNavigationBar.
-version: 0.0.7
+description: Provides Flutter navigation by using a sidemenu similar to Drawer or BottomNavigationBar.
+version: 0.0.8
 repository: https://github.com/jksevend/side_navigation
 
 environment:
